# agent-playground

./: .env.example  .gitignore  README.md  app.py  mcp.json  providers.toml  pyproject.toml
.streamlit/: config.toml
mcp_servers/: README.md
mcp_servers/memory/: README.md  __init__.py  dreamer.py  hot_path.py  ids.py  models.py  server.py
mcp_servers/notes/: README.md  server.py
pages/: 1_Basic_Chat.py  2_Dreaming.py
playground/: branding.py  chat_ui.py  persistence.py  smoke.py
playground/mcp/: bridge.py  client.py  config.py
playground/prompts/: loader.py
playground/providers/: anthropic_client.py  base.py  config.py  lmstudio_client.py  local_client.py  openai_client.py  registry.py
playground/tools/: __init__.py
tests/: conftest.py  test_lmstudio_prompted_tools.py  test_local_prompted_tools.py  test_mcp_bridge.py  test_mcp_config.py  test_persistence.py  test_prompts_loader.py  test_providers.py  test_providers_config.py  test_tools_registry.py
tests/fixtures/: anthropic_basic_response.jsonl  conversation_v1.json  openai_basic_response.jsonl
tests/memory/: conftest.py  test_background_pack.py  test_basic_chat_hook.py  test_bitemporal_invariants.py  test_connection.py  test_decay.py  test_dreamer_control.py  test_dreamer_lock.py  test_dreamer_runner.py  test_e2e_smoke.py  test_embeddings_base.py  test_embeddings_openai_compat.py  test_embeddings_st.py  test_entity_resolve.py  test_extractor_pump.py  test_extractor_worker.py  test_ids.py  test_llm_calls.py  test_mcp_server.py  test_migrations.py  test_pagerank.py  test_recall.py  (+17 more)
(+53 files in other folders)
