[project]
name = "travisml-agent-playground"
version = "0.1.0"
description = "Branded multi-provider agent playground — chat, tools, MCP, dreaming, and more."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Travis Lelle" }]
license = { text = "MIT" }

dependencies = [
  "streamlit>=1.40",
  "anthropic>=0.40",
  "openai>=1.55",
  "mcp>=0.9",
  "python-dotenv>=1.0",
  "sqlite-vec>=0.1.6",
  "sentence-transformers>=3.0",
  "scikit-learn>=1.5",
  "networkx>=3.3",
  "python-ulid>=3.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["playground"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: tests that download models or are otherwise slow"]
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
